default/objects/CCS_Order_Opportunity_Stage_Mapping__c/CCS_Order_Opportunity_Stage_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Order Stage mapping from CCS Order Custom Object to Opportunity StageName and other fields.</description>
    <label>CCS Order and Opportunity Stage Mapping</label>
</CustomObject>