default/objects/CCS_Order_Opportunity_Stage_Mapping__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>Opportunity field.</description>
    <label>Lost_To_Competitor__c (Opportunity)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>