default/objects/CCS_Order_Opportunity_Stage_Mapping__c/fields/Order_Stage__c.field-meta.xml
<CustomField>
    <fullName>Order_Stage__c</fullName>
    <description>CCS Order Field.</description>
    <label>Order Stage (CCS Order)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>