default/objects/CCS_Order_Opportunity_Stage_Mapping__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <description>Opportunity Field.</description>
    <label>Stage Name (Opportunity)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>