default/objects/CCS_Order_Opportunity_Stage_Mapping__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <description>Opportunity Field.</description>
    <label>Sub_Stage__c (Opportunity)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>