default/objects/CCS_Order_Opportunity_Stage_Mapping__c/fields/Sub_Stage_Detail_Other__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage_Detail_Other__c</fullName>
    <description>Opportunity field.</description>
    <label>Sub_Stage_Detail_Other__c (Opportunity)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>