default/objects/CCS_Order_Opportunity_Stage_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Stage__c</columns>
    <columns>StageName__c</columns>
    <columns>Sub_Stage__c</columns>
    <columns>Sub_Stage_Detail__c</columns>
    <columns>Sub_Stage_Detail_Other__c</columns>
    <columns>Competition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>